# Workbridge

./: Cargo.toml  README.md  openapi.json
Writerside/: ad.tree  redirection-rules.xml
Writerside/cfg/: buildprofiles.xml
Writerside/topics/openapi.json/: API_Reference.md  Get_all_users.topic  Get_categories.topic  Get_user_details.topic  Login_a_user.topic  Register_a_user.topic  Submit_user_details.topic
src/: main.rs
src/handlers/: auth.rs  utils.rs
src/models/: auth.rs  utils.rs
vue/diplomati/: README.md  package-lock.json  package.json
vue/diplomati/src/: App.vue  main.js  router.js
vue/diplomati/src/components/: NavBar.vue  UserCard.vue  UserDetails.vue  UserDetailsDialog.vue  UserLogin.vue  UserProfile.vue  UserRegistration.vue  UserSearch.vue
