[package]
name = "diplomati_vue"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = "25.0.0"
bcrypt = "0.15.1"
actix-web = "4.5.1"
actix-files = "0.6.5"
actix-cors = "0.7.0"
serde = "1.0.197"
env_logger = "0.11.3"
utoipa = {version = "4.2.0", features = ["actix_extras"]}
utoipa-swagger-ui = {version = "6.0.0", features = ["actix-web"]}
